# core-backend.V2

./: .env.example  .gitignore  CHANGES_REPORT.md  EMBED.md  LLM_SEARCH_CHANGES.md  PERFORMANCE_IMPROVEMENT_REPORT.md  PROGRESS.md  README.md  example_usage.md  requirements.txt  start.sh  vercel.json
app/: config.py  main.py
rag_pipeline/: README.md  create_db.py  database.py  generate_data_store.py  generate_data_store_BioBERT.py  helpers.py  pyproject.toml  query_data_store.py  query_data_store_biobert.py  router.py
rag_pipeline/models/: vector_model.py  vector_model_dockling.py
rag_pipeline/rag_testing/: README.md  ragas.py  synthetic_test_set.py
rag_pipeline/rag_testing/data/: ragas_evaluation_results.csv  test.csv  test2.csv
rag_pipeline/rag_testing/synthetic_dataset/: fetch_data_and_models.py  knowledge_graph.py  personas.py  synthetic_test_set.py
rag_pipeline/rag_testing/synthetic_dataset/data/: test.csv  test2.csv
rag_pipeline/rag_testing/test_results/: averaged_results.txt  gpt-4o-mini_pritamdeka__S-BioBert-snli-multinli-stsb_eval_res.csv  gpt-4o-mini_text-embedding-3-small_eval_res.csv
rag_pipeline/rag_testing_deepeval/: deepeval.py  testcases.py
rag_pipeline/rag_testing_deepeval/metrics/accuracy/: accuracy.py  scorer.py
rag_pipeline/rag_testing_deepeval/metrics/citation/: citation.py
rag_pipeline/rag_testing_deepeval/metrics/completeness/: completeness.py  scorer.py
rag_pipeline/rag_testing_deepeval/metrics/latency/: latency.py
rag_pipeline/schema/: rag_docling_schema.py  rag_res_schema.py
rag_pipeline/static/: home.html  viewer.html
(+49 files in other folders)
