[project]
name = "tms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-huggingface>=1.0.1",
    "langchain-openai>=1.0.2",
    "langchain-text-splitters>=1.0.0",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.26.6",
    "pypdf>=6.2.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "redis>=7.0.1",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "torch>=2.9.1",
]
